--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -3,13 +3,13 @@
 .navBar {
   display: flex;
   justify-content: space-between;
-  background: #c4c4c4;
+  background: $main-grey;
   width: 100%;
   height: 65px;
 
   box {
-    background: #ffffff;
-    border: 2px solid #21b5a2;
+    background: $main-white;
+    border: 2px solid $main-green;
     box-sizing: border-box;
     border-radius: 6px;
     margin-top: auto;
@@ -18,21 +18,21 @@
 
   .changeLanguage {
     @extend box;
-    width: 46px;
-    height: 31px;
-    margin-left: 11px;
+    width: 45px;
+    height: 30px;
+    margin-left: 10px;
   }
 
   .signUp {
     @extend box;
-    width: 142px;
-    height: 47px;
+    width: 140px;
+    height: 45px;
   }
 
   .login {
     @extend box;
-    width: 46px;
-    height: 31px;
-    margin-right: 11px;
+    width: 45px;
+    height: 30px;
+    margin-right: 10px;
   }
 }
