Create bussiness silder component and slider Relates #11

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 @import "./theme/colors.scss";
+@import "./theme/fonts.scss";
 
 .App {
   h1 {
     color: $main-green;
+    font-size: $font-size-h1;
   }
 }
