--- a/src/components/BusinessCard/style.scss
+++ b/src/components/BusinessCard/style.scss
@@ -1,11 +1,12 @@
 @import "../../theme/colors.scss";
+@import "../../theme/utils.scss";
 
 .business-card {
   display: flex;
-  border: $main-green 1px solid;
+  border: $main-green 2px solid;
   border-radius: 5px;
-  width: 80%;
-  height: 100px;
+  width: 85%;
+  height: 120px;
   margin: 0.5em auto 0.5em auto;
   font-size: 0.8em;
 
@@ -23,16 +24,18 @@
     flex-direction: column;
     justify-content: space-between;
     width: 70%;
-    padding: 0.5em;
+    padding: 0.5em 0.5em 0 0.5em;
 
     .business-name {
       justify-content: flex-start;
       align-items: center;
+      font-size: 20px;
+      @include lineClamp(1);
     }
 
     .business-description {
-      text-overflow: ellipsis;
-      text-align: justify;
+      @include lineClamp(3);
+      font-size: 16px;
     }
 
     .business-bottom-content {
@@ -40,8 +43,11 @@
       justify-content: space-between;
 
       .business-type {
-        color: $light-green;
+        color: $dark-grey;
+        margin-top: .5em;
+        font-style: italic;
       }
+
     }
   }
 }
