--- a/src/components/BusinessSlide/style.scss
+++ b/src/components/BusinessSlide/style.scss
@@ -1,5 +1,6 @@
 @import "../../theme/fonts.scss";
 @import "../../theme/colors.scss";
+@import "../../theme/utils.scss";
 
 .container {
   display: flex;
@@ -10,39 +11,41 @@
   border-radius: 10px;
   min-height: 200px;
   max-height: 200px;
-  margin: 0 25px;
+  margin: 0 10px;
+
   .name {
     align-self: center;
     font-size: $font-size-h1;
     margin: 5px auto 8px auto;
   }
+
   .description {
     align-self: center;
     font-size: $font-size-p;
-    text-overflow: ellipsis;
-    white-space: normal;
     width: 90%;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    @include lineClamp(2);
+
   }
+
   .img {
     height: 100px;
     border-radius: 8px 8px 0px 0px;
   }
+
   .type-rating-container {
     display: flex;
     justify-content: space-between;
     margin-top: auto;
+
     .rating {
       margin: 5px;
       display: flex;
       max-height: 10px;
     }
+
     .type {
       margin: 5px;
-      color: lightgray;
+      color: $dark-grey;
       font-style: italic;
     }
   }
