--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -21,6 +21,13 @@
     width: 45px;
     height: 30px;
     margin-left: 10px;
+    .select {
+      background: none;
+      border-style: none;
+      outline: 0;
+      width: 100%;
+      height: 25px;
+    }
   }
 
   .signUp {
