font added and tiny bit css fixing

--- a/src/components/BusinessCard/style.scss
+++ b/src/components/BusinessCard/style.scss
@@ -44,7 +44,7 @@
 
       .business-type {
         color: $dark-grey;
-        margin-top: .5em;
+        margin: .5em inherit .2em inherit;
         font-style: italic;
       }
 
