--- a/src/theme/utils.scss
+++ b/src/theme/utils.scss
@@ -2,8 +2,20 @@
   white-space: normal;
   text-overflow: ellipsis;
   display: -webkit-box;
+  word-break: break-all;
   -webkit-line-clamp: $lines;
   -webkit-box-orient: vertical;
   text-align: justify;
   overflow: hidden;
+line-height: 1.3;
+margin-top: -1px;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src:
+      url('../assets/fonts/Helvetica-arabic.ttf') format('truetype'),
+      url('../assets/fonts/Helvetica-arabic.ttf') format('truetype');
+   font-weight: normal;
+   font-style: normal;
 }
