--- a/src/components/BusinessDetails/style.scss
+++ b/src/components/BusinessDetails/style.scss
@@ -1,41 +1,6 @@
 @import "../../theme/colors.scss";
 
-.business-page-header {
-  width: 100%;
-  height: 330px;
-  border-bottom: 1px solid;
-
-  .main-image {
-    width: 100%;
-    height: 230px;
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .sub-images {
-    img {
-      width: 80% !important;
-      height: 60px;
-      border-radius: 5px;
-      margin: 1em 1em;
-    }
-  }
-}
-
-.business-page-nav {
-  border-bottom: 1px solid;
-
-  .nav-items {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-  }
-}
-
-.business-content {
+.business-Details {
   text-align: center;
 
   .upper-details-container {
@@ -71,16 +36,20 @@
       margin: 10px;
     }
   }
-  .business-address,
   .business-type {
     color: $main-grey;
     margin-bottom: 10px;
   }
-  .business-address {
+  .address {
+    margin-top: 40px;
     text-align: left;
-    margin: 10px;
+    .business-address {
+      color: $main-grey;
+      margin: 10px;
+    }
   }
-  .directions-googleMaps {
-    max-height: 300px;
-  }
+}
+.emptyBusinessDetails {
+  text-align: center;
+  margin-top: 40px;
 }
