fixed small styling issue Relates #40

--- a/src/components/ReviewCard/styles.scss
+++ b/src/components/ReviewCard/styles.scss
@@ -10,7 +10,8 @@
     font-style: italic;
     color: $dark-grey;
     width: 85px;
-    float: left;
+    position: absolute;
+    margin: 1px 290px;
   }
   .img-rating-container {
     display: flex;
