adds a couple of fixes to the busines page

--- a/src/components/BusinessDetails/BusinessDetails.module.scss
+++ b/src/components/BusinessDetails/BusinessDetails.module.scss
@@ -1,54 +1,71 @@
 @import "../../theme/colors.scss";
 
-.business-Details {
-  text-align: center;
 
-  .upper-details-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-    padding: 10px;
+.upper-details-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  padding: 10px;
+
+
+  .business-type {
+    color: $main-grey;
+    margin-bottom: 10px;
   }
+
+}
+
   .business-name,
   .contact-title {
-    text-align: left;
     font-size: 25px;
     margin: 10px;
-    font-family: Roboto;
     font-weight: bold;
     margin-top: 10px;
   }
+
   .business-description {
     width: 80%;
-    text-align: left;
     margin: auto;
   }
+
   .place-features {
     display: flex;
     justify-content: space-evenly;
     margin: 20px;
   }
+
   .contact-container {
     margin-top: 30px;
     .contact-info {
       display: flex;
       justify-content: space-around;
       margin: 10px;
+
+      .business-contact {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        flex-direction: row-reverse;
+        margin-top: 20px;
+        .icon {
+          margin: 0px 10px;
+          max-width: 18px;
+        }
+      }
     }
   }
-  .business-type {
-    color: $main-grey;
-    margin-bottom: 10px;
-  }
+
   .address {
     margin-top: 40px;
-    text-align: left;
+    text-align: center;
+    font-size: 22px;
     .business-address {
-      color: $main-grey;
+      color: $dark-grey;
       margin: 10px;
     }
   }
-}
+
+
 .emptyBusinessDetails {
   text-align: center;
   margin-top: 40px;
