--- a/src/pages/BusinessPage/style.scss
+++ b/src/pages/BusinessPage/style.scss
@@ -32,55 +32,13 @@
     display: flex;
     justify-content: space-between;
     padding: 1em;
-  }
-}
+    margin: 0 40px;
 
-.business-content {
-  text-align: center;
-
-  .upper-details-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-    padding: 10px;
-  }
-  .business-name,
-  .contact-title {
-    text-align: left;
-    font-size: 25px;
-    margin: 10px;
-    font-family: Roboto;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  .business-description {
-    width: 80%;
-    text-align: left;
-    margin: auto;
-  }
-  .place-features {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 20px;
-  }
-  .contact-container {
-    margin-top: 30px;
-    .contact-info {
-      display: flex;
-      justify-content: space-around;
-      margin: 10px;
+    .nav-button {
+      border: 2px solid $main-green;
+      padding: 10px 20px;
+      border-radius: 6px;
+      background: none;
     }
-  }
-  .business-address,
-  .business-type {
-    color: $main-grey;
-    margin-bottom: 10px;
-  }
-  .business-address {
-    text-align: left;
-    margin: 10px;
-  }
-  .directions-googleMaps {
-    max-height: 300px;
   }
 }
