--- a/src/pages/BusinessPage/style.scss
+++ b/src/pages/BusinessPage/style.scss
@@ -1,32 +1,8 @@
 @import "../../theme/colors.scss";
 
-.business-page-header {
-  width: 100%;
-  height: 330px;
-  border-bottom: 1px solid;
-
-  .main-image {
-    width: 100%;
-    height: 230px;
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .sub-images {
-    img {
-      width: 80% !important;
-      height: 60px;
-      border-radius: 5px;
-      margin: 1em 1em;
-    }
-  }
-}
-
 .business-page-nav {
-  border-bottom: 1px solid;
+  box-shadow: 0 5px 10px -6px $dark-green;
+
 
   .nav-items {
     display: flex;
@@ -36,7 +12,8 @@
 
     .nav-button {
       border: 2px solid $main-green;
-      padding: 10px 20px;
+      padding: 10px 30px;
+      
       border-radius: 6px;
       background: none;
       outline: 0;
