--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,26 +2,21 @@
 
 .footer {
   display: flex;
-  justify-content: space-evenly;
-  background: #f5f5f5;
-  width: 100%;
-  height: 60px;
+  justify-content: center;
+  background: $main-green;
+  width: 70px;
+  height: 70px;
   position: fixed;
   bottom: 0;
   transition: all 0.3s;
-  border-radius: 18px 18px 0px 0px;
+  border-radius: 50%;
   font-size: 25px;
+  margin: 20px;
+  left: 0;
 
-  .filter,
-  .sort {
+  .filter {
     margin-top: auto;
     margin-bottom: auto;
-  }
-  .separator {
-    margin-top: 10px;
-    background: $main-black;
-    width: 1px;
-    height: 65%;
   }
 
   .overlay {
@@ -30,7 +25,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-
     left: -1000px;
     transition: all 0.5s;
 
