adds shadow to the footer button

--- a/src/components/BusinessPageImageGallery/BusinessPageImageGallery.module.scss
+++ b/src/components/BusinessPageImageGallery/BusinessPageImageGallery.module.scss
@@ -14,7 +14,9 @@
     }
   
     .sub-images {
-      
+      direction: ltr;
+      justify-content: flex-start;
+
         img {
         max-width: 80px;
         min-width: 80px;
