--- a/src/pages/AddBusiness/style.scss
+++ b/src/pages/AddBusiness/style.scss
@@ -11,7 +11,7 @@
     img {
       width: 100%;
       height: 250px;
-      }
+    }
 
     .sub-imgs {
       height: 150px;
@@ -71,7 +71,16 @@
     @extend .form-input;
   }
 
-
+  .submit-btn {
+    background: #ffffff;
+    color: #21B5A2;
+    padding: .5em;
+    margin: .5em 0 .5em 0;
+    border: 2px solid #21B5A2;
+    border-radius: 6px;
+    font-size: 1em;
+    font-weight: bold;
+  }
 
   .checkbox {
     display: flex;
