--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -36,6 +36,7 @@
       height: 100%;
       background-color: #f5f5f5;
       display: block;
+      position: relative;
 
       .sideBarHider {
         background: none;
@@ -43,6 +44,7 @@
         border: none;
         font-size: 36px;
         outline: none;
+        position: absolute;
       }
 
       .sideBarHider:hover {
