--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -36,9 +36,18 @@
   }
 
   .login {
-    @extend box;
     width: 65px;
     height: 45px;
     margin: auto 10px;
+    display: flex;
+    justify-content: center;
+    button:focus {
+      outline: 0;
+    }
+    button {
+      background: none;
+
+      border: none;
+    }
   }
 }
