--- a/src/components/BusinessReviews/styles.scss
+++ b/src/components/BusinessReviews/styles.scss
@@ -18,19 +18,46 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin: 10px auto;
-  border: 2px solid $main-green;
-  padding: 5px;
+  margin: 25px auto 30px auto;
+  // box-shadow: 5px 5px 10px -6px $dark-green;
+  padding: 10px 5px 5px 5px;
   border-radius: 6px;
 }
 
 .submit-review-button {
   background: none;
-  font-size: 20px;
+  font-size: 25px;
   border: 2px solid $main-green;
-  padding: 4px 8px;
+  padding: 8px 16px;
   border-radius: 6px;
   margin-top: 30px;
   margin-bottom: 10px;
 
+}
+
+.submit-button {
+  @extend .submit-review-button;
+  padding: 4px 40px;
+  color: $main-green;
+}
+
+
+.form-input {
+  background: #FFFFFF;
+  border: 2px solid #21B5A2;
+  border-radius: 6px;
+  box-sizing: border-box;
+  padding: .7em;
+  margin: .5em 0 .5em 0;
+  font-size: 18px
+}
+
+.form-input::-webkit-input-placeholder {
+  font-size: 18px;
+}
+
+.large-input {
+  @extend .form-input;
+  width: 100%;
+  margin: 30px 0px 20px auto;
 }
