--- a/src/components/BusinessDetails/BusinessDetails.module.scss
+++ b/src/components/BusinessDetails/BusinessDetails.module.scss
@@ -30,12 +30,14 @@
 
   .place-features {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 80%;
     margin: 20px;
   }
 
   .contact-container {
-    margin-top: 30px;
+    margin-top: 20px;
     .contact-info {
       display: flex;
       justify-content: space-around;
