--- a/src/components/Filtering/style.scss
+++ b/src/components/Filtering/style.scss
@@ -1,3 +1,5 @@
+@import "../../theme/colors.scss";
+
 .filters {
   display: flex;
   flex-direction: column;
@@ -8,6 +10,7 @@
     text-align: center;
     color: gray;
     font-size: 20px;
+    
   }
 
   .filterSectionTitle {
@@ -15,6 +18,7 @@
     margin-bottom: 10px;
     margin-top: 60px;
     font-size: 40px;
+    color: $main-green;
   }
 
   .filtersContainer {
@@ -25,6 +29,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+
     }
     .filterByBusinessType,
     .filterByCuisineType {
@@ -32,6 +37,32 @@
       width: 230px;
       height: 35px;
       margin-bottom: 20px;
+    }
+  }
+
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    .actionButton {
+      background: none;
+      font-size: 20px;
+      border: 2px solid $main-green;
+      padding: 8px 16px;
+      border-radius: 6px;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      max-width: 230px;
+      min-width: 230px;
+      color: $main-green;
+
+      &:nth-child(2) {
+        margin-top: 5px;
+        color: gray;
+      }
     }
   }
 }
