--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -15,7 +15,7 @@
   border-radius: 50%;
   font-size: 25px;
   margin: 20px;
-  left: 0;
+  right: 0;
 
   .filter {
     margin-top: auto;
@@ -28,8 +28,10 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    left: -1000px;
     transition: all 0.5s;
+    display: flex;
+    flex-direction: row-reverse;
+
 
     .sideBar {
       width: 75%;
