--- a/src/pages/AddBusiness/style.scss
+++ b/src/pages/AddBusiness/style.scss
@@ -59,7 +59,8 @@
     box-sizing: border-box;
     padding: .2em .7em;
     margin: .5em 0 .5em 0;
-    font-size: 18px
+    font-size: 18px;
+    flex-grow: 1;
   }
 
   .form-input::-webkit-input-placeholder {
