update the code base

--- a/src/pages/BusinessPage/style.scss
+++ b/src/pages/BusinessPage/style.scss
@@ -1,4 +1,4 @@
-@import "../../theme/colors.scss";
+@import "theme/colors.scss";
 
 .business-page-nav {
   box-shadow: 0 5px 10px -6px $dark-green;
