--- a/src/components/Cards/BusinessCard/BusinessCard.module.scss
+++ b/src/components/Cards/BusinessCard/BusinessCard.module.scss
@@ -1,5 +1,5 @@
-@import "../../theme/colors.scss";
-@import "../../theme/utils.scss";
+@import "theme/colors.scss";
+@import "theme/utils.scss";
 
 .business-card {
   display: flex;
