--- a/src/pages/Home/components/BusinessSlide/style.scss
+++ b/src/pages/Home/components/BusinessSlide/style.scss
@@ -1,6 +1,6 @@
-@import "../../theme/fonts.scss";
-@import "../../theme/colors.scss";
-@import "../../theme/utils.scss";
+@import "theme/fonts.scss";
+@import "theme/colors.scss";
+@import "theme/utils.scss";
 
 .container {
   display: flex;
@@ -26,7 +26,7 @@
     @include lineClamp(2);
   }
 
-  .img {
+  .business-img {
     height: 100px;
     border-radius: 8px 8px 0px 0px;
   }
