--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,9 @@
 
 .App {
 
-  @media screen and (min-width: 900px){
-    margin: 0 30%;
+  @media screen and (min-width: 1000px){
+    margin: auto;
+    max-width: 50%;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.8), 0 2px 5px 0 rgba(0,0,0,.6);
   }
 }
