--- a/src/pages/AddBusiness/style.scss
+++ b/src/pages/AddBusiness/style.scss
@@ -54,8 +54,9 @@
 
   .form-input {
     background: #FFFFFF;
-    border: 2px solid #21B5A2;
-    border-radius: 6px;
+    border: 0;
+    border-bottom: 2px solid #21B5A2;
+    // border-radius: 6px;
     box-sizing: border-box;
     padding: .2em .7em;
     margin: .5em 0 .5em 0;
@@ -72,8 +73,8 @@
   }
 
   .submit-btn {
-    background: #ffffff;
-    color: #21B5A2;
+    color: #ffffff;
+    background: #21B5A2;
     padding: .5em;
     margin: .5em 0 .5em 0;
     border: 2px solid #21B5A2;
