--- a/src/pages/BusinessPage/components/BusinessReviews/styles.scss
+++ b/src/pages/BusinessPage/components/BusinessReviews/styles.scss
@@ -45,8 +45,9 @@
 
 .form-input {
   background: #FFFFFF;
-  border: 2px solid #21B5A2;
-  border-radius: 6px;
+  border: 0;
+  border-bottom: 2px solid #21B5A2;
+  // border-radius: 6px;
   box-sizing: border-box;
   padding: .7em;
   margin: .5em 0 .5em 0;
