--- a/src/pages/ProfileBusinessList/style.scss
+++ b/src/pages/ProfileBusinessList/style.scss
@@ -1,9 +1,10 @@
 .profile-businesses-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
   margin: 0 auto 0;
   justify-content: space-around;
+  max-width: 90%;
+  margin: auto;
 
 
   .add-business-btn {
