--- a/src/pages/ProfilePage/styles.scss
+++ b/src/pages/ProfilePage/styles.scss
@@ -8,6 +8,8 @@
   margin-top: 20px;
   box-shadow: 0 5px 10px -6px $dark-green;
   padding: 20px 10px;
+  max-width: 90%;
+  margin: auto;
 
   img {
     border-radius: 50%;
@@ -15,15 +17,28 @@
 }
 .navbar-container {
   display: flex;
+  margin: auto;
   margin-top: 20px;
+  max-width: 90%;
 
   margin-bottom: 15px;
-  button {
+  .navButton {
     width: 100%;
     border: none;
     background: none;
-    border: solid 1px;
+
     padding: 10px;
     font-size: 23px;
+    box-shadow: 0 5px 10px -6px $dark-green;
+
+
+    &:nth-child(1) {
+      border-left: solid 1px;
+    }
+
+    &:nth-child(2) {
+      border-right: solid 1px;
+    }
+
   }
 }
