--- a/src/pages/Signin/style.scss
+++ b/src/pages/Signin/style.scss
@@ -14,3 +14,10 @@
     background: blue;
   }
 }
+
+.logout-btn {
+  background: none;
+  border: none;
+  align-self: flex-end;
+  margin-left: 3rem;
+}
