Add reviewrs num near to ratings rel #4

--- a/src/pages/BusinessPage/components/BusinessDetails/BusinessDetails.module.scss
+++ b/src/pages/BusinessPage/components/BusinessDetails/BusinessDetails.module.scss
@@ -13,6 +13,18 @@
     margin-bottom: 10px;
   }
 
+  .business-rating{
+    display: flex;
+    align-items: center;
+  }
+
+  .reviewrs-count{
+    font-size: 12px;
+    margin-left: 5px;
+    color: $main-grey;
+    font-weight: bold;
+  }
+
 }
 
   .business-name,
