--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -1,5 +1,9 @@
 @import "theme/colors.scss";
 
+button:hover {
+  cursor: pointer;
+}
+
 .navBar {
   display: flex;
   justify-content: space-between;
@@ -21,6 +25,7 @@
     width: 65px;
     height: 45px;
     margin: auto 10px;
+
     .select {
       background: none;
       border-style: none;
@@ -37,18 +42,24 @@
   }
 
   .login {
-    width: 65px;
+    width: 10vw;
     height: 45px;
-    margin: auto 10px;
+    margin: auto 1vw;
     display: flex;
-    justify-content: center;
-    button:focus {
-      outline: 0;
-    }
-    button {
-      background: none;
-
-      border: none;
-    }
+    justify-content: space-around;
   }
+
+  button:focus {
+    outline: 0;
+  }
+
+  button {
+    background: none;
+    border: none;
+    // padding: 1rem;
+    margin-right: 1rem;
+    margin-left: 0.7rem;
+  }
+
+  .home-btn {}
 }
