--- a/src/pages/BusinessPage/components/BusinessReviews/styles.scss
+++ b/src/pages/BusinessPage/components/BusinessReviews/styles.scss
@@ -1,5 +1,17 @@
 @import "theme/colors.scss";
 
+.reviews-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 20px;
+}
+
+.reviews-container-p{
+  font-size: 12px;
+  font-style: italic;
+}
+
 .rating-container {
   display: flex;
   padding: 10px;
