and circullar progress and fix its style rel #7

--- a/src/pages/ProfilePage/styles.scss
+++ b/src/pages/ProfilePage/styles.scss
@@ -1,4 +1,10 @@
 @import "theme/colors.scss";
+
+.emptyBusinessDetails {
+  text-align: center;
+  margin-top: 40px;
+}
+
 .profile-container {
   display: flex;
   align-items: center;
