--- a/src/pages/ReviewerPage/style.scss
+++ b/src/pages/ReviewerPage/style.scss
@@ -1,5 +1,11 @@
 @import "theme/colors.scss";
 
+
+.emptyBusinessDetails {
+  text-align: center;
+  margin-top: 40px;
+}
+
 .reviewer-container{
 
     .profile-container {
