--- a/src/pages/Home/components/PopupMarker/style.scss
+++ b/src/pages/Home/components/PopupMarker/style.scss
@@ -4,16 +4,9 @@
 
 .popup-window {
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  max-width: 25em;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
-  border: gray 1px solid;
   animation: 0.1s ease-in-out 0s 1 scaleOut;
 
   .business-image {
@@ -21,6 +14,7 @@
     height: 100%;
     border-radius: 5px;
     cursor: pointer;
+    min-height: 90px;
   }
 
   .business-info {
@@ -51,29 +45,18 @@
       font-style: italic;
       font-size: 14px;
     }
-  }
-
-  button {
-    padding: 8px 14px;
-    background-color: #21b5a2;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    text-align: center;
-    font-weight: 600;
-    margin-top: auto;
-  }
-
-  button:hover {
-    background-color: #508991;
-  }
-
-  .grow {
-    transition: all 0.2s ease-in-out;
-  }
-
-  .grow:hover {
-    transform: scale(1.1) perspective(10px);
+    
+    .business-link {
+      padding: 8px 14px;
+      background-color: #21b5a2;
+      border-radius: 5px;
+      border: none;
+      min-width: 50px;
+      color: white;
+      text-align: center;
+      font-weight: 600;
+      margin-top: auto;
+    }
   }
 }
 
