--- a/src/components/Filtering/style.scss
+++ b/src/components/Filtering/style.scss
@@ -25,20 +25,55 @@
     margin-top: 55px;
 
     .filterByBusinessTypeContainer,
-    .filterByCuisineTypeContainer {
+    .filterByCuisineTypeContainer,
+    .filterByRadiusContainer {
       display: flex;
       flex-direction: column;
       align-items: center;
 
     }
     .filterByBusinessType,
-    .filterByCuisineType {
+    .filterByCuisineType,
+    .filterByRadius {
       margin-top: 20px;
       width: 230px;
       height: 35px;
       margin-bottom: 20px;
     }
+
+    .slider {
+      -webkit-appearance: none;
+      height: 15px;
+      border-radius: 5px;
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
+    .slider:hover {
+      opacity: 1;
+    }
+    
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #21b5a2;
+      cursor: pointer;
+    }
+    
+    .slider::-moz-range-thumb {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #21b5a2;
+      cursor: pointer;
+    }
   }
+
 
   .buttonContainer {
     display: flex;
