--- a/src/components/SearchBar/style.scss
+++ b/src/components/SearchBar/style.scss
@@ -5,13 +5,13 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  margin-bottom: 0.3rem;
+  margin: 0.3rem 0;
 
   input {
     width: 80%;
     border: solid 1px #21b5a2;
-    border-radius: 0.5rem;
-    padding-left: 0.5rem;
+    border-radius: 1rem;
+    padding-left: 1rem;
     outline: none;
     font-size: medium;
     font-weight: 500;
