--- a/src/components/SearchBar/style.scss
+++ b/src/components/SearchBar/style.scss
@@ -4,16 +4,19 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
+  width: 70%;
   margin: 0.3rem 0;
+  position: absolute;
+  top: 4.5px;
+  left: 0;
+  z-index: 999;
 
   input {
     width: 80%;
     border: solid 1px #21b5a2;
-    border-radius: 1rem;
-    padding-left: 1rem;
+    border-radius: 5px;
+    padding: 4px 10px;
     outline: none;
-    font-size: medium;
-    font-weight: 500;
+    font-size: 15px;
   }
 }
