--- a/src/pages/ReviewerPage/style.scss
+++ b/src/pages/ReviewerPage/style.scss
@@ -23,9 +23,9 @@
         .profile-container-headers{
             display: flex;
             flex-direction: column;
-             justify-content: space-evenly;
+            justify-content: space-evenly;
             height: 70px;
-            margin-left: 10px;
+            margin: 0 10px;
         }
       
         img {
