--- a/src/pages/ProfilePage/styles.scss
+++ b/src/pages/ProfilePage/styles.scss
@@ -1,4 +1,4 @@
-@import "theme/colors.scss";
+@import 'theme/colors.scss';
 
 .emptyBusinessDetails {
   text-align: center;
@@ -37,7 +37,6 @@
     font-size: 23px;
     box-shadow: 0 5px 10px -6px $dark-green;
 
-
     &:nth-child(1) {
       border-left: solid 1px;
     }
@@ -45,6 +44,5 @@
     &:nth-child(2) {
       border-right: solid 1px;
     }
-
   }
 }
