--- a/src/components/SearchBar/style.scss
+++ b/src/components/SearchBar/style.scss
@@ -7,7 +7,7 @@ input {
   border-radius: 4px;
   padding: 0 10px;
   margin: 0.5rem;
-  right: 4rem;
+  left: 0;
   outline: none;
   font-size: 19px;
   z-index: 999;
