--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -40,11 +40,11 @@ button:hover {
   }
 
   .login {
-    width: 38%;
+    width: 100%;
     height: 60%;
     margin: auto 1vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-self: center;
   }
 
