Changes styles for the new buttons,check boxes and list items are now autofilled,fixed errors and react warnings rel #43 #52 #53

--- a/src/components/BusinessesList/style.scss
+++ b/src/components/BusinessesList/style.scss
@@ -25,9 +25,10 @@
   }
 
   .business-control-btn,.business-control-back-btn{
-    background-color: #21b5a2;
-    color: white;
+    background-color: white;
+    color: #21b5a2;
     font-size: 1.1rem;
     border-radius: 5px;
+    font-weight: bolder;
   }
 }
