--- a/src/pages/AddBusiness/style.scss
+++ b/src/pages/AddBusiness/style.scss
@@ -6,7 +6,27 @@
   .header-items {
     display: flex;
     flex-direction: column;
-
+    .main-img-container {
+      padding: 0.2rem;
+      display: flex;
+    }
+    button {
+      background-color: #21b5a2;
+      border-radius: 50%;
+      color: white;
+      width: 1.6em;
+      height: 1.6em;
+      font-size: 1.2rem;
+      margin: 0.4rem;
+    }
+    .sub-img-container {
+      display: flex;
+      button {
+        font-size: 0.7rem;
+        padding: 0.2rem;
+        margin: 0;
+      }
+    }
     img {
       width: 100%;
       height: 250px;
@@ -50,7 +70,7 @@
     margin-top: 1em;
     .error-msg {
       color: red;
-      margin:0.3rem;
+      margin: 0.3rem;
     }
   }
 
