--- a/src/pages/ProfileBusinessList/style.scss
+++ b/src/pages/ProfileBusinessList/style.scss
@@ -6,6 +6,14 @@
   max-width: 90%;
   margin: auto;
 
+  .promoteButton {
+    align-self: center;
+    color: rgb(122, 122, 179);
+  }
+  
+  .promoteButton:hover {
+    text-decoration-line: underline;
+  }
 
   .add-business-btn {
     background: #ffffff;
@@ -17,6 +25,4 @@
     font-size: 1em;
     font-weight: bold;
   }
-
-
 }
