--- a/src/pages/FollowersPage/styles.scss
+++ b/src/pages/FollowersPage/styles.scss
@@ -26,6 +26,7 @@
     padding: 20px 10px;
     max-width: 90%;
     margin: auto;
+    margin-bottom: 20px;
 
     .business-profile-container-headers{
         display: flex;
