--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -10,7 +10,8 @@ button:hover {
   width: 100%;
   height: 65px;
   direction: ltr;
-
+  box-shadow: 0 5px 10px -6px #508991;
+  
   box {
     background: $main-white;
     border: 2px solid $main-green;
