--- a/src/pages/PromotionsPage/style.scss
+++ b/src/pages/PromotionsPage/style.scss
@@ -35,7 +35,7 @@
     .checkoutButton {
         margin-top: 2rem;
         padding: 1rem 2rem;
-        border-radius: 1rem;
+        border-radius: 5px;
         border: solid 1px #508991;
         background-color: #21b5a2;
         outline: none;
